src/test/ui/impl-trait/bindings.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:5:29
   |
LL |     const foo: impl Clone = x;
   |     ---------               ^ non-constant value
   |     |
   |     help: consider using `let` instead of `const`: `let foo`

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:11:33
   |
LL |         const foo: impl Clone = x;
   |         ---------               ^ non-constant value
   |         |
   |         help: consider using `let` instead of `const`: `let foo`

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:18:33
   |
LL |         const foo: impl Clone = x;
   |         ---------               ^ non-constant value
   |         |
   |         help: consider using `let` instead of `const`: `let foo`

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:25:33
   |
LL |         const foo: impl Clone = x;
   |         ---------               ^ non-constant value
   |         |
   |         help: consider using `let` instead of `const`: `let foo`

error[E0562]: `impl Trait` not allowed outside of function and inherent method return types
  --> $DIR/bindings.rs:5:16
   |
LL |     const foo: impl Clone = x;
   |                ^^^^^^^^^^
   |
   = help: add `#![feature(impl_trait_in_bindings)]` to the crate attributes to enable

error[E0562]: `impl Trait` not allowed outside of function and inherent method return types
  --> $DIR/bindings.rs:11:20
   |
LL |         const foo: impl Clone = x;
   |                    ^^^^^^^^^^
   |
   = help: add `#![feature(impl_trait_in_bindings)]` to the crate attributes to enable

error[E0562]: `impl Trait` not allowed outside of function and inherent method return types
  --> $DIR/bindings.rs:18:20
   |
LL |         const foo: impl Clone = x;
   |                    ^^^^^^^^^^
   |
   = help: add `#![feature(impl_trait_in_bindings)]` to the crate attributes to enable

error[E0562]: `impl Trait` not allowed outside of function and inherent method return types
  --> $DIR/bindings.rs:25:20
   |
LL |         const foo: impl Clone = x;
   |                    ^^^^^^^^^^
   |
   = help: add `#![feature(impl_trait_in_bindings)]` to the crate attributes to enable

warning: the feature `impl_trait_in_bindings` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/bindings.rs:1:12
   |
LL | #![feature(impl_trait_in_bindings)]
   |            ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information

error: aborting due to 8 previous errors; 1 warning emitted

Some errors have detailed explanations: E0435, E0562.
For more information about an error, try `rustc --explain E0435`.
